* SendService renamed to ResponseSender * Added Request record with update and session fields * Added ClearSessionHandler